# INOX

./: .gitignore  .gitmodules  Cargo.toml  INOX.code-workspace  LICENSE  NRG.code-workspace  README.md  SABI.code-workspace  build.rs  clippy_output.txt  data_files.txt  frag.spv  index.html  passes_list.txt  patch_build_rs.py  reproduce_bug.rs  server.py  shaders_list.txt  start_inox_viewer.bat  start_server.bat  test_canvas.html  test_output.txt  test_wgpu.html
app/: Cargo.toml  build.rs
app/src/: app.rs  lib.rs  main.rs  phase.rs  phases.rs  plugin.rs  plugin_manager.rs  scheduler.rs  shared_data.rs  stage.rs  system.rs
apps/editor_app/: Cargo.toml
apps/editor_app/src/: config.rs  editor.rs  editor_updater.rs  lib.rs  main.rs  nodes_registry.rs  widget_registry.rs
apps/test_app/: Cargo.toml
apps/test_app/src/: config.rs  entry_point.rs  lib.rs  main.rs  main_system.rs  ui_system.rs
binarizer/: Cargo.toml
binarizer/src/: config_compiler.rs  copy_compiler.rs  data_watcher.rs  font_compiler.rs  gltf_compiler.rs  image_compiler.rs  lib.rs  parser.rs  shader_compiler.rs  utils.rs
bindings/vulkan_bindings/: Cargo.toml  build.rs
bindings/vulkan_bindings/data/: README.md
bindings/vulkan_bindings/src/: lib.rs
blender/: Cargo.toml  build.rs
blender/nrg_blender/NRG/: keymaps.py  operators.py
blender/src/: lib.rs
camera/: Cargo.toml
camera/src/: camera.rs  camera_data.rs  lib.rs
core/: Cargo.toml  build.rs
core/src/: app.rs  component.rs  config.rs  entity.rs  lib.rs  system.rs
core/src/platform_impl/: handle.rs  window.rs
core/src/plugins/: plugin.rs  plugin_manager.rs
core/src/resources/: resource.rs  shared_data.rs
core/src/schedule/: job.rs  mod.rs  phase.rs  scheduler.rs  system.rs  worker.rs
crates/: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: config.rs  launcher.rs  lib.rs  main.rs  window_system.rs
crates/apps/launcher_app/: Cargo.toml
crates/bhv/: Cargo.toml
crates/bhv/src/: aabb.rs  bhv.rs  lib.rs  partition.rs  sah.rs
crates/binarizer/: Cargo.toml  build.rs
crates/binarizer/src/: copy_compiler.rs  data_watcher.rs  font_compiler.rs  gltf_compiler.rs  image_compiler.rs  lib.rs  shader_compiler.rs  utils.rs
crates/bindings/vulkan_bindings/: Cargo.toml  build.rs
crates/bitmask/: Cargo.toml
crates/bitmask/src/: lib.rs
crates/blender/: Cargo.toml  build.rs
crates/blender/sabi_blender/: README.md
crates/blender/src/: engine.rs  exporter.rs  lib.rs  macros.rs  node_graph.rs
crates/bvh/: Cargo.toml
crates/bvh/src/: aabb.rs  bvh.rs  gpu.rs  lib.rs
crates/bvh/tests/: aabb_intersection.rs
crates/commands/: Cargo.toml  build.rs
crates/commands/src/: commands.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  config.rs  context.rs  lib.rs
crates/core/tests/: test_scheduler.rs
crates/events/: Cargo.toml
crates/events/src/: history.rs  lib.rs
crates/filesystem/: Cargo.toml  build.rs
crates/filesystem/src/: file.rs  lib.rs  library.rs  utils.rs
crates/graphics/: Cargo.toml  build.rs
crates/graphics/src/: compute_culling.rs  debug.rs  lib.rs  visibility.rs  wireframe.rs
crates/libs/wgpu-profiler/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/log/: Cargo.toml
crates/log/src/: lib.rs
crates/math/: Cargo.toml
crates/math/src/: angle.rs  frustum.rs  hash.rs  lib.rs  matrix.rs  packing.rs  parser.rs  quaternion.rs  random.rs  vector.rs
crates/messenger/: Cargo.toml  build.rs
crates/messenger/src/: lib.rs  macros.rs  message.rs  message_hub.rs  messenger.rs
crates/nodes/: Cargo.toml
crates/nodes/src/: lib.rs  link.rs  logic_context.rs  logic_data.rs  logic_nodes.rs  macros.rs  node.rs  node_registry.rs  node_tree.rs  pin.rs
crates/platform/: Cargo.toml  build.rs
crates/platform/src/: ctypes.rs  handle.rs  lib.rs  thread.rs  watcher.rs  window.rs
crates/plugins/binarizer/: Cargo.toml  build.rs
crates/plugins/common_script/: Cargo.toml
crates/plugins/connector/: Cargo.toml
crates/plugins/content_browser/: Cargo.toml
crates/plugins/editor/: Cargo.toml
crates/plugins/example_game/: Cargo.toml
crates/plugins/viewer/: Cargo.toml
crates/profiler/: Cargo.toml
crates/profiler/src/: cpu_profiler.rs  gpu_profiler.rs  lib.rs  macros.rs  profiler.rs
crates/render/: Cargo.toml  build.rs
crates/render/src/: lib.rs
crates/resources/: Cargo.toml
crates/resources/src/: buffer.rs  config.rs  data.rs  event_handlers.rs  events.rs  hash_buffer.rs  hash_indexer.rs  lib.rs  resource.rs  shared_data.rs  singleton.rs  storage.rs
crates/scene/: Cargo.toml  build.rs
crates/scene/src/: camera.rs  hitbox.rs  lib.rs  object.rs  scene.rs  script.rs
crates/serialize/: Cargo.toml  build.rs
crates/serialize/serializable/: Cargo.toml
crates/time/: Cargo.toml  build.rs
crates/tinybvh/: Cargo.toml  Cargo.toml.orig  README.md  build.rs
crates/ui/: Cargo.toml
crates/uid/: Cargo.toml
crates/web/: index.html  start_server.bat
editor/: Cargo.toml
editor/src/: config.rs  editor.rs  editor_updater.rs  lib.rs
game/: Cargo.toml  build.rs
game/src/: config.rs  game.rs  lib.rs  system.rs
graphics/: Cargo.toml
graphics/src/: block.rs  chunk.rs  data_formats.rs  device.rs  instance.rs  lib.rs  material.rs  mesh.rs  pipeline.rs  render_pass.rs  renderer.rs  shader.rs
main/: Cargo.toml  build.rs
main/src/: lib.rs  main.rs  test.rs
math/: Cargo.toml
math/src/: angle.rs  boundaries.rs  cast_from.rs  cast_to.rs  curves.rs  float.rs  integer.rs  lib.rs  macros.rs  matrix.rs  number.rs  one.rs  parser.rs  points.rs  quaternion.rs  random.rs  ray.rs  triangle.rs  vector.rs  zero.rs
profiler/: Cargo.toml  build.rs
profiler/src/: lib.rs  macros.rs  profiler.rs
renderer/: Cargo.toml
renderer/src/: config.rs  gfx.rs  lib.rs  rendering_system.rs  update_system.rs
scene/: Cargo.toml
scene/src/: camera.rs  hitbox.rs  lib.rs  light.rs  object.rs  scene.rs  transform.rs
serialize/: Cargo.toml
serialize/src/: lib.rs  serialize.rs  uuid.rs
ui/: Cargo.toml
ui/src/: lib.rs  ui_events.rs  ui_properties.rs  ui_system.rs  ui_widget.rs
(+2448 files in other folders)
