[workspace]

members = [
    "apps/content_browser",
    "apps/editor",
    "apps/launcher_app",
    "binarizer",
    "bindings/vulkan_bindings",
    "camera",
    "core",
    "events",
    "filesystem",
    "graphics",
    "gui",
    "math",
    "messenger",
    "platform",
    "profiler",
    "resources",
    "scene",
    "serialize",
    "ui",
]

resolver = "2"