[workspace]

members = [
    "apps/content_browser",
    "apps/editor",
    "apps/launcher_app",
    "binarizer",
    "blender",
    "bindings/vulkan_bindings",
    "camera",
    "core",
    "events",
    "filesystem",
    "graphics",
    "math",
    "messenger",
    "platform",
    "profiler",
    "resources",
    "scene",
    "serialize",
    "ui",
]

resolver = "2"