[workspace]

members = [
    "apps/content_browser",
    "apps/editor",
    "apps/launcher_app",
    "apps/viewer",
    "binarizer",
    "blender",
    "bindings/vulkan_bindings",
    "core",
    "events",
    "filesystem",
    "graphics",
    "math",
    "messenger",
    "platform",
    "profiler",
    "resources",
    "scene",
    "serialize",
    "ui",
]

resolver = "2"
cargo-features = ["edition2021"]