[package]
name = "nrg_binarizer"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
gltf = { git = "https://github.com/gltf-rs/gltf", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_pbrSpecularGlossiness"] }
nrg_filesystem = { path = "../filesystem" }
nrg_graphics = { path = "../graphics" }
nrg_math = { path = "../math" }
nrg_messenger = { path = "../messenger" }
nrg_platform = { path = "../platform" }
nrg_profiler = { path = "../profiler" }
nrg_resources = { path = "../resources" }
nrg_scene = { path = "../scene" }
nrg_serialize = { path = "../serialize" }

