[package]
name = "nrg_core"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
downcast-rs = { git = "https://github.com/marcianx/downcast-rs" }
nrg_messenger = { path = "../messenger" }
nrg_filesystem = { path = "../filesystem" }
nrg_platform = { path = "../platform" }
nrg_profiler = { path = "../profiler" }
nrg_resources = { path = "../resources" }
nrg_serialize = { path = "../serialize" }
