[workspace]
resolver = "2"
members = [
    "app",
    "bitmask",
    "bhv",
    "blender",
    "commands",
    "core",
    "filesystem",
    "graphics",
    "log",
    "math",
    "messenger",
    "nodes",
    "platform",
    "plugins/binarizer",
    "plugins/common_script",
    "plugins/viewer",
    "plugins/connector",
    "profiler",
    "resources",
    "scene",
    "serialize",
    "time",
    "ui",
    "uid",
]

[profile.release]
debug = 1

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
repository = "https://github.com/gents83/INOX"
keywords = ["engine", "graphics", "blender", "gamedev", "plugin", "game engine", "rendering", "wgpu", "webgpu"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cgmath = { git = "https://github.com/rustgd/cgmath", features = ["serde", "swizzle"] }
downcast-rs = { git = "https://github.com/marcianx/downcast-rs" }
egui = { git = "https://github.com/emilk/egui" }
image = { git = "https://github.com/image-rs/image", default-features = false, features = [ "gif","jpeg","ico","png","pnm","tga","tiff","webp","bmp","hdr","dxt","dds"] }
pyo3 = { git = "https://github.com/PyO3/pyo3", features = ["macros", "extension-module", "auto-initialize", "abi3-py310", "generate-import-lib"] }
rand = { git = "https://github.com/rust-random/rand", features = ["std"] }
serde_json = { git = "https://github.com/serde-rs/json"}
ttf-parser = { git = "https://github.com/RazrFalcon/ttf-parser" }
superluminal-perf =  { git = "https://github.com/EmbarkStudios/superluminal-perf-rs" }
uuid = { git = "https://github.com/uuid-rs/uuid", features = ["serde", "v4", "v5", "js"] }

wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["spirv", "glsl", "wgsl", "fragile-send-sync-non-atomic-wasm"] }
wgpu-profiler = { git = "https://github.com/Wumpf/wgpu-profiler" }
naga = { version = "0.14", features = ["validate", "wgsl-in", "spv-out", "serialize", "deserialize"] }
regex = { git = "https://github.com/rust-lang/regex" }
gltf = { git = "https://github.com/gltf-rs/gltf", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_pbrSpecularGlossiness"] }
meshopt = { git = "https://github.com/gwihlidal/meshopt-rs" }

futures = { git = "https://github.com/rust-lang/futures-rs", features = ["std", "thread-pool"] }
raw-window-handle = { version = "0.6" }
serde = { version = "1.0", features = ["derive", "rc"]}
serde_derive = { version = "1.0"}
erased-serde = { version = "0.3" }
rspirv = { version = "0.11" }

# wasm32
js-sys = "0.3.66"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.39"
wasm-bindgen-test = "0.3"
web-sys = "0.3.66"

[patch."https://github.com/gwihlidal/meshopt-rs"]
meshopt = { git = "https://github.com/gents83/meshopt-rs"}

[patch."https://github.com/Wumpf/wgpu-profiler"]
wgpu-profiler = { git = "https://github.com/gents83/wgpu-profiler.git", branch = "wgpu-updated"}

#[patch."https://github.com/gfx-rs/wgpu"]
#wgpu = { path = "../../wgpu/wgpu" }
#wgpu = { git = "https://github.com/gents83/wgpu" }