[workspace]
resolver = "2"
members = [
    "app",
    "bitmask",
    "bvh",
    "blender",
    "commands",
    "core",
    "filesystem",
    "graphics",
    "log",
    "math",
    "messenger",
    "nodes",
    "platform",
    "plugins/binarizer",
    "plugins/common_script",
    "plugins/viewer",
    "plugins/connector",
    "profiler",
    "render",
    "resources",
    "scene",
    "serialize",
    "time",
    "ui",
    "uid",
]

[profile.release]
debug = 1

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
repository = "https://github.com/gents83/INOX"
keywords = [
    "engine",
    "graphics",
    "blender",
    "gamedev",
    "plugin",
    "game engine",
    "rendering",
    "wgpu",
    "webgpu",
]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cgmath = { git = "https://github.com/rustgd/cgmath", features = [
    "serde",
    "swizzle",
] }
downcast-rs = { git = "https://github.com/marcianx/downcast-rs" }
egui = { git = "https://github.com/emilk/egui" }
image = { git = "https://github.com/image-rs/image", version = "0.25.0", default-features = false, features = [
    "default-formats",
] }
pyo3 = { git = "https://github.com/PyO3/pyo3", features = [
    "macros",
    "extension-module",
    "auto-initialize",
    "abi3-py310",
    "generate-import-lib",
] }
rand = { git = "https://github.com/rust-random/rand", features = ["std"] }
serde_json = { git = "https://github.com/serde-rs/json" }
flexbuffers = { git = "https://github.com/google/flatbuffers" }
ttf-parser = { git = "https://github.com/RazrFalcon/ttf-parser" }
superluminal-perf = { git = "https://github.com/EmbarkStudios/superluminal-perf-rs" }
uuid = { git = "https://github.com/uuid-rs/uuid", features = [
    "serde",
    "v4",
    "v5",
    "js",
] }

wgpu = { git = "https://github.com/gfx-rs/wgpu", features = [
    "spirv",
    "glsl",
    "metal",
    "wgsl",
    "webgl",
    "vulkan",
    "gles",
    "webgpu",
    "fragile-send-sync-non-atomic-wasm",
] }
naga = { git = "https://github.com/gfx-rs/wgpu", features = [
    "default",
    "glsl-in",
    "wgsl-in",
    "spv-out",
    "serialize",
    "deserialize",
] }
wgpu-profiler = { git = "https://github.com/Wumpf/wgpu-profiler" }
regex = { git = "https://github.com/rust-lang/regex" }
gltf = { git = "https://github.com/gltf-rs/gltf", features = [
    "extras",
    "names",
    "KHR_materials_unlit",
    "KHR_lights_punctual",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_transmission",
    "KHR_materials_variants",
    "KHR_materials_ior",
    "KHR_materials_emissive_strength",
    "KHR_materials_volume",
    "KHR_materials_specular",
] }
mikktspace = { git = "https://github.com/gltf-rs/mikktspace" }
meshopt = { git = "https://github.com/gwihlidal/meshopt-rs" }
metis = { git = "https://github.com/LIHPC-Computational-Geometry/metis-rs" }
env_logger = "0.11"
tracing = { version = "0.1", features = ["log"] }

futures = { git = "https://github.com/rust-lang/futures-rs", features = [
    "std",
    "thread-pool",
] }
raw-window-handle = { version = "0.6" }
serde = { version = "1.0.194", features = ["derive", "rc"] }
serde_derive = { version = "1.0.194" }
erased-serde = { version = "0.4.5" }
rspirv = { version = "0.11" }

# wasm32
js-sys = { version = "0.3.82" }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.49" }
wasm-bindgen-test = { version = "0.3.49" }
web-sys = { version = "0.3.82", features = [
    "Request",
    "Response",
    "Document",
    "DomRect",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlTimeElement",
    "MouseEvent",
    "KeyboardEvent",
    "TimeEvent",
    "TimeRanges",
    "Window",
    "Performance",
    "PerformanceTiming",
] }

#[patch."https://github.com/gwihlidal/meshopt-rs"]
#meshopt = { git = "https://github.com/gents83/meshopt-rs", branch = "traverse_breda_vertex_lock" }

[patch."https://github.com/Wumpf/wgpu-profiler"]
wgpu-profiler = { git = "https://github.com/gents83/wgpu-profiler.git", branch = "wgpu-updated" }

#[patch."https://github.com/gfx-rs/wgpu"]
#wgpu = { path = "../../wgpu/wgpu" }
#wgpu = { git = "https://github.com/gents83/wgpu" }
