[package]
name = "nrg_editor"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"] 

[dependencies]
nrg_core = { path = "../core" }
nrg_commands = { path = "../commands" }
nrg_math = { path = "../math" }
nrg_gui = { path = "../gui" }
nrg_graphics = { path = "../graphics" }
nrg_platform = { path = "../platform" }
nrg_serialize = { path = "../serialize" }