[package]
name = "nrg_graphics"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2018"

[dependencies]
image = { path = "../external/image-rs" }
ttf-parser = { path = "../external/ttf-parser" }
vulkan_bindings = { path = "../bindings/vulkan_bindings" }
nrg_math = { path = "../math" }
nrg_platform = { path = "../platform" }
nrg_common = { path = "../common" }

[build-dependencies]
image = { path = "../external/image-rs" }
ttf-parser = { path = "../external/ttf-parser" }
vulkan_bindings = { path = "../bindings/vulkan_bindings" }
nrg_math = { path = "../math" }
nrg_platform = { path = "../platform"}
nrg_common = { path = "../common" }