[package]
name = "nrg_math"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
cgmath = { git = "https://github.com/rustgd/cgmath", features = ["serde", "swizzle"] }
rand = { git = "https://github.com/rust-random/rand" }