[package]
name = "nrg_profiler"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
serde_json = {git = "https://github.com/serde-rs/json"}
nrg_filesystem = { path = "../filesystem" }
nrg_platform = { path = "../platform" }