[package]
name = "nrg_renderer"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
nrg_core = { path = "../core" }
nrg_messenger = { path = "../messenger" }
nrg_math = { path = "../math" }
nrg_graphics = { path = "../graphics" }
nrg_platform = { path = "../platform" }
nrg_profiler = { path = "../profiler" }
nrg_resources = { path = "../resources" }
nrg_serialize = { path = "../serialize" }