[package]
name = "nrg_scene"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
nrg_math = { path = "../math" }
nrg_graphics = { path = "../graphics" }
nrg_resources = { path = "../resources" }
nrg_serialize = { path = "../serialize" }
