[package]
name = "nrg_serialize"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
serde_derive = {version = "1.0"}
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = {git = "https://github.com/serde-rs/json"}
uuid = { git = "https://github.com/uuid-rs/uuid", features = ["serde", "v4", "v5"] }
typetag = {git = "https://github.com/dtolnay/typetag" }