[package]
name = "nrg_ui"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
egui = { git = "https://github.com/emilk/egui", features = ["multi_threaded"] }
#egui = {path = "../../egui/egui", features = ["multi_threaded"]}
image = { git = "https://github.com/image-rs/image" }

nrg_core = { path = "../core" }
nrg_messenger = { path = "../messenger" }
nrg_math = { path = "../math" }
nrg_graphics = { path = "../graphics" }
nrg_platform = { path = "../platform" }
nrg_profiler = { path = "../profiler" }
nrg_resources = { path = "../resources" }
nrg_serialize = { path = "../serialize" }