[package]
name = "nrg_editor"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2018"

[dependencies]
nrg_binarizer = { path = "../../binarizer" }
nrg_camera = { path = "../../camera" }
nrg_core = { path = "../../core" }
nrg_filesystem = { path = "../../filesystem" }
nrg_events = { path = "../../events" }
nrg_graphics = { path = "../../graphics" }
nrg_messenger = { path = "../../messenger" }
nrg_math = { path = "../../math" }
nrg_platform = { path = "../../platform" }
nrg_profiler = { path = "../../profiler" }
nrg_resources = { path = "../../resources" }
nrg_scene = { path = "../../scene" }
nrg_serialize = { path = "../../serialize" }
nrg_ui = { path = "../../ui" }
