[package]
name = "vulkan_bindings"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrg_filesystem = { path = "../../filesystem"}

[build-dependencies]
bindgen = { git = "https://github.com/rust-lang/rust-bindgen"}
xml-rs = { git = "https://github.com/netvl/xml-rs" }

