[package]
name = "sabi_launcher"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"

[dependencies]
sabi_binarizer = { path = "../binarizer" }
sabi_resources = { path = "../resources" }
sabi_commands = { path = "../commands" }
sabi_core = { path = "../core" }
sabi_filesystem = { path = "../filesystem" }
sabi_graphics = { path = "../graphics" }
sabi_math = { path = "../math" }
sabi_messenger = { path = "../messenger" }
sabi_platform = { path = "../platform" }
sabi_serialize = { path = "../serialize" }

