[package]
name = "inox_launcher"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"

[dependencies]
inox_binarizer = { path = "../binarizer" }
inox_resources = { path = "../resources" }
inox_commands = { path = "../commands" }
inox_core = { path = "../core" }
inox_filesystem = { path = "../filesystem" }
inox_graphics = { path = "../graphics" }
inox_math = { path = "../math" }
inox_messenger = { path = "../messenger" }
inox_platform = { path = "../platform" }
inox_profiler = { path = "../profiler" }
inox_serialize = { path = "../serialize" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.57"
web-sys = "0.3.56"