[package]
name = "inox_launcher"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true


[features]
dhat-heap = [] # if you are doing heap profiling

[dependencies]
inox_resources = { path = "../resources" }
inox_commands = { path = "../commands" }
inox_core = { path = "../core" }
inox_log = { path = "../log" }
inox_filesystem = { path = "../filesystem" }
inox_graphics = { path = "../graphics" }
inox_math = { path = "../math" }
inox_messenger = { path = "../messenger" }
inox_platform = { path = "../platform" }
inox_profiler = { path = "../profiler" }
inox_serialize = { path = "../serialize" }
env_logger = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dhat = "0.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
