[package]
name = "sabi_binarizer"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
gltf = { path = "../../extern/gltf", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_pbrSpecularGlossiness"] }
sabi_filesystem = { path = "../filesystem" }
sabi_graphics = { path = "../graphics" }
sabi_math = { path = "../math" }
sabi_messenger = { path = "../messenger" }
sabi_nodes = { path = "../nodes" }
sabi_platform = { path = "../platform" }
sabi_profiler = { path = "../profiler" }
sabi_resources = { path = "../resources" }
sabi_scene = { path = "../scene" }
sabi_serialize = { path = "../serialize" }

