[package]
name = "inox_binarizer"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib"]

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
meshopt = { path = "../../extern/meshopt-rs" }
gltf = { path = "../../extern/gltf", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_pbrSpecularGlossiness"] }
inox_filesystem = { path = "../filesystem" }
inox_graphics = { path = "../graphics" }
inox_log = { path = "../log" }
inox_math = { path = "../math" }
inox_messenger = { path = "../messenger" }
inox_nodes = { path = "../nodes" }
inox_platform = { path = "../platform" }
inox_profiler = { path = "../profiler" }
inox_resources = { path = "../resources" }
inox_scene = { path = "../scene" }
inox_serialize = { path = "../serialize" }

