[package]
name = "inox_blender"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "inox_blender"
crate-type = ['cdylib', 'rlib']

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pyo3 = { path = "../../extern/pyo3", features = ["macros", "extension-module", "auto-initialize", "abi3-py310"] }
inox_binarizer = { path = "../binarizer" }
inox_core = { path = "../core" }
inox_graphics = { path = "../graphics" }
inox_filesystem = { path = "../filesystem" }
inox_math = { path = "../math" }
inox_nodes = { path = "../nodes" }
inox_resources = { path = "../resources" }
inox_scene = { path = "../scene" }
inox_serialize = { path = "../serialize" }