[package]
name = "inox_blender"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
name = "inox_blender"
crate-type = ["cdylib"]

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
pyo3 = { path = "../../extern/pyo3", features = ["macros", "extension-module", "auto-initialize", "abi3-py310", "generate-abi3-import-lib"] }
inox_binarizer = { path = "../plugins/binarizer" }
inox_core = { path = "../core" }
inox_graphics = { path = "../graphics" }
inox_filesystem = { path = "../filesystem" }
inox_math = { path = "../math" }
inox_nodes = { path = "../nodes" }
inox_platform = { path = "../platform" }
inox_resources = { path = "../resources" }
inox_scene = { path = "../scene" }
inox_serialize = { path = "../serialize" }