[package]
name = "inox_blender"
build = "build.rs"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
name = "inox_blender"
crate-type = ["cdylib"]

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
pyo3 = { workspace = true }
inox_binarizer = { path = "../plugins/binarizer" }
inox_core = { path = "../core" }
inox_graphics = { path = "../graphics" }
inox_filesystem = { path = "../filesystem" }
inox_math = { path = "../math" }
inox_nodes = { path = "../nodes" }
inox_platform = { path = "../platform" }
inox_resources = { path = "../resources" }
inox_scene = { path = "../scene" }
inox_serialize = { path = "../serialize" }