[package]
name = "sabi_core"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib",'rlib']

[dependencies]
downcast-rs = { path = "../../extern/downcast-rs" }
sabi_commands = { path = "../commands" }
sabi_filesystem = { path = "../filesystem" }
sabi_messenger = { path = "../messenger" }
sabi_platform = { path = "../platform" }
sabi_profiler = { path = "../profiler" }
sabi_resources = { path = "../resources" }
sabi_serialize = { path = "../serialize" }
