[package]
name = "inox_core"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
downcast-rs = { path = "../../extern/downcast-rs" }
inox_commands = { path = "../commands" }
inox_filesystem = { path = "../filesystem" }
inox_messenger = { path = "../messenger" }
inox_platform = { path = "../platform" }
inox_profiler = { path = "../profiler" }
inox_resources = { path = "../resources" }
inox_serialize = { path = "../serialize" }
inox_uid = { path = "../uid" }
