[package]
name = "inox_core"
build = "build.rs"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
downcast-rs = { workspace = true }
inox_commands = { path = "../commands" }
inox_filesystem = { path = "../filesystem" }
inox_log = { path = "../log" }
inox_messenger = { path = "../messenger" }
inox_platform = { path = "../platform" }
inox_profiler = { path = "../profiler" }
inox_resources = { path = "../resources" }
inox_serialize = { path = "../serialize" }
inox_time = { path = "../time" }
inox_uid = { path = "../uid" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }