[package]
name = "inox_filesystem"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
web-sys = { version = "0.3.56", features = ["Request", "Window", "Response"] }
js-sys = "0.3.56"
wasm-bindgen-futures = "0.4.29"