[package]
name = "inox_filesystem"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["Request", "Window", "Response"] }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }