[package]
name = "inox_filesystem"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]


[dependencies]
inox_log = { path = "../log" }

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "netbsd", target_os = "openbsd", target_os = "macos", target_os = "ios", target_os = "android"))'.dependencies]
libloading = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
