[package]
name = "inox_graphics"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
inox_bvh = { path = "../bvh" }
inox_commands = { path = "../commands" }
inox_core = { path = "../core" }
inox_filesystem = { path = "../filesystem" }
inox_log = { path = "../log" }
inox_math = { path = "../math" }
inox_messenger = { path = "../messenger" }
inox_render = { path = "../render" }
inox_resources = { path = "../resources" }
inox_profiler = { path = "../profiler" }
inox_scene = { path = "../scene" }
inox_uid = { path = "../uid" }
