[package]
name = "inox_graphics"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Graphics crate"
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
inox_bvh = { path = "../bvh" }
inox_commands = { path = "../commands" }
inox_core = { path = "../core" }
inox_math = { path = "../math" }
inox_messenger = { path = "../messenger" }
inox_platform = { path = "../platform" }
inox_profiler = { path = "../profiler" }
inox_render = { path = "../render" }
inox_resources = { path = "../resources" }
inox_serialize = { path = "../serialize" }
inox_uid = { path = "../uid" }

image.workspace = true
serde.workspace = true
wgpu.workspace = true
