[package]
name = "inox_messenger"
build = "build.rs"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
inox_commands = { path = "../commands" }
inox_log = { path = "../log" }
inox_uid = { path = "../uid" }