[package]
name = "sabi_nodes"
version = "0.1.0"
authors = ["gents83 <gents83@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["lib"]

[dependencies]
sabi_resources = { path = "../resources" }
sabi_filesystem = { path = "../filesystem" }
sabi_serialize = { path = "../serialize" }
